--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>DEMO GIT</title>
 </head>
 <body>
-    <h1>DEMO GITHUB</h1> :laughing:
+    <h1>DEMO GITHUB</h1> 
+    <h2>Using emoji</h2>
 </body>
 </html>
